# kittymenu

./: .gitignore  CMakeLists.txt  README.md  kitty_include.conf
src/: kitty_ncurses_menu.cpp  runUnixCMD.h
